remove froala and user-status (!), rmeove chat, remove home, more nav clean, footer color, clean keyboard shortcuts, remove admin , transactions, remove cloud, docs template, convert shop to product, remove dev, clean groups, remove small templates, remove classic model homes, remove people,

--- a/client/grid.jade
+++ b/client/grid.jade
@@ -1,12 +1,12 @@
 template(name='grid')
-    .ui.left.icon.input
-        input.model_filter(type='text' autofocus='autofocus')
-        if model_filter_value
-            i.remove.link.icon
-        else 
-            i.search.icon
-    unless model_filter_value
-        +cloud filter='model'
+    //- .ui.left.icon.input
+    //-     input.model_filter(type='text' autofocus='autofocus')
+    //-     if model_filter_value
+    //-         i.remove.link.icon
+    //-     else 
+    //-         i.search.icon
+    //- unless model_filter_value
+    //-     +cloud filter='model'
     .ui.stackable.three.column.padded.grid
         .row
             each role_models
