--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -17,7 +17,7 @@ template(name='delta')
                             .ui.icon.large.compact.button.add_model_doc(title="add #{title}")
                                 //- +i name='plus' classes='ui avatar inline image add_model_doc'title='add'
                                 i.plus.big.blue.icon
-                        +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' label="bookmark"
+                        //- +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' label="bookmark"
                         //- if is_dev
                         //-     .ui.icon.large.button.edit_model
                         //-         i.large.cog.icon
