--- a/components/inbox.jade
+++ b/components/inbox.jade
@@ -21,7 +21,7 @@ template(name='message_segment')
 template(name='view_notifications')
     .centered.row
         .four.wide.column
-            +cloud key='tags' filter='notification'
+            //- +cloud key='tags' filter='notification'
             #mark_all_read.ui.basic.button 
                 i.visible.icon
                 |mark all read
